# LE5010_cmake

./: CMakeLists.txt  README.md
soc/arm_cm/le501x/compiler/gnu/: ble_common.ld
